# legendary-rotary-phone

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CVE_Report_Template.docx  CVE_Research_Template.xlsx  DATA_DICTIONARY.md  DATA_SOURCE_AUDIT_FINDINGS.md  Makefile  ODIN_AGENT_PERSPECTIVE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_Enterprise_Dashboard.md  README_WebUI.md  RELEASE_README.md  SECURITY.md  TODO.md  UPDATED_COLOR_SCHEME.md  cli.py  cve_metadata_fetcher.py  cve_research_toolkit_fixed.py  cve_research_ui.py  cves.txt  debug_fields.py  flow.md  launch_dashboard.py  odin_agent_retrospective.md  odin_cli.py  project_status.md  pyproject.toml  requirements-backend.txt  requirements.txt  run_all_tests.py  sample_cves.txt  smoke_test.py  start_new_ui.py  start_odin_ui.py  start_odin_ui_simple.py  start_ui.py  start_webui.py  streamlit_app.py  (+8 more)
.agent/: context.md
.claude/: settings.local.json
.github/scripts/: remove_emojis.py
.github/workflows/: ci.yml  codacy.yml  create-release.yml  main.yml  sanitize-emojis.yml  version-update.yml
archive/: test_cve_metadata_fetcher.py  test_legacy.py  test_research_toolkit.py
archive/development-versions/: cve_metadata_fetcher.py  cve_metadata_fetcher_enhanced.py  cve_metadata_fetcher_improved.py  cve_research_toolkit.py
backend/: app.py
cve_research_toolkit/: __init__.py  __main__.py  cli.py  exceptions.py
cve_research_toolkit/connectors/: __init__.py  cve_project.py  cvss_bt.py  patrowl.py  threat_context.py  trickest.py
cve_research_toolkit/core/: engine.py
cve_research_toolkit/models/: data.py
cve_research_toolkit/reporting/: generator.py
cve_research_toolkit/utils/: __init__.py  config.py
docs/: COMPREHENSIVE_FIELD_AUDIT.md  DATA_DICTIONARY.md  DATA_ENHANCEMENT_ROADMAP.md  DATA_LINEAGE.md  DATA_SOURCE_SCHEMAS.md  FIELD_COVERAGE_MATRIX.md  FIELD_GAP_ANALYSIS.md  TODO.md  VERSION_MANAGEMENT.md  project_status.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/CVEModal/: CVEModal.css  CVEModal.tsx
frontend/src/components/CVETable/: CVETable.css  CVETable.tsx
frontend/src/components/Filters/: FilterBar.css  FilterBar.tsx
frontend/src/components/Pagination/: Pagination.css  Pagination.tsx
frontend/src/components/Research/: ResearchInput.css  ResearchInput.tsx
frontend/src/hooks/: useCVEData.ts  useCVEDataSimple.ts  useModalNavigation.ts  usePagination.ts
odin/: __init__.py  __main__.py  cli.py  exceptions.py  version.py
odin/connectors/: __init__.py  base.py  cve_project.py  cvss_bt.py  mitre.py  patrowl.py  threat_context.py  trickest.py
odin/core/: __init__.py  engine.py
odin/models/: __init__.py  data.py
odin/reporting/: __init__.py  generator.py
odin/utils/: config.py  console.py  control_mapper.py  retry.py
scripts/: bump-version.py  quality-check.sh  type-check.sh
test_exports/: test.json
test_type_fixes/: research_report_20250614_000522.json
tests/: test_cli_entry.py  test_cve_metadata_fetcher.py  test_error_handling.py  test_research_comprehensive.py
tests/test-data/: test_all_zero_cvss.txt  test_cvss_fix.txt  test_problematic.txt
workflows/: ci.yaml
